--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.core:core-splashscreen:1.0.0'
     def room_version = "2.3.0"
 
     implementation("androidx.room:room-runtime:$room_version")
